# synthetis-bitmap

./: CMakeLists.txt  EasyBMP.cpp  README.md  fractal  fractalJulia.cpp  fractalMandelbrot  fractalMandelbrot.cpp  main.cpp  menu  rescale  resizeBmp.cpp  resizeProgram  synthesis
